# libusbhost

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DEVICE_DRIVER_HOWTO  Doxyfile  Makefile  README.md  compileDemo.sh  config.mk  initRepo.sh  libopencm3_stm32f4.ld  libusbhost_stm32f4.ld
cmake/: doc.cmake  openocd_flash.cmake  toolchain.cmake
include/: usbh_config.h  usbh_core.h  usbh_driver_ac_midi.h  usbh_driver_gp_xbox.h  usbh_driver_hid.h  usbh_driver_hid_mouse.h  usbh_driver_hub.h  usbh_hubbed.h  usbh_lld_stm32f4.h
include/driver/: usbh_device_driver.h
src/: CMakeLists.txt  demo.c  usart_helpers.c  usart_helpers.h  usbh_core.c  usbh_driver_ac_midi.c  usbh_driver_gp_xbox.c  usbh_driver_hid.c  usbh_driver_hid_mouse.c  usbh_driver_hub.c  usbh_driver_hub_private.h  usbh_hubbed.c  usbh_lld_stm32f4.c
